[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Rogue/Assets/Rogue.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Rogue/Scripts/Rogue.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 10 )

[sub_resource type="CircleShape2D" id=2]
radius = 104.043

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 10 )

[sub_resource type="CircleShape2D" id=4]
radius = 54.037

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483653
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.8743e-06, -3.27826e-07 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Colider" type="CollisionShape2D" parent="."]
light_mask = 5
shape = SubResource( 1 )

[node name="GroundDetector" type="RayCast2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
light_mask = 6
position = Vector2( -17, -10 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2147483652
collide_with_areas = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2147483649

[node name="Colider" type="CollisionShape2D" parent="PlayerDetector" groups=[
"Enemy",
]]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.00784314, 0, 1, 1 )
shape = SubResource( 3 )

[node name="MeleeCombat" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeCombat"]
shape = SubResource( 4 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="area_entered" from="MeleeCombat" to="." method="_on_MeleeCombat_area_entered"]
[connection signal="area_exited" from="MeleeCombat" to="." method="_on_MeleeCombat_area_exited"]
[connection signal="body_entered" from="MeleeCombat" to="." method="_on_MeleeCombat_body_entered"]
[connection signal="body_exited" from="MeleeCombat" to="." method="_on_MeleeCombat_body_exited"]
